[gd_scene load_steps=4 format=3 uid="uid://dcvlbwvfew6rc"]

[ext_resource type="PackedScene" uid="uid://bufsrg01ml6ew" path="res://enemy.tscn" id="2_oqefw"]
[ext_resource type="Script" path="res://player.gd" id="3_cm6aa"]
[ext_resource type="PackedScene" uid="uid://cj8bj1vgowq0x" path="res://player.tscn" id="3_hrxh0"]

[node name="Battle" type="Node2D"]

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-146, 145)
rotation = 0.21383
polygon = PackedVector2Array(909.414, 172.958, 230.966, -53.224, 736.543, -213.152, 1220.71, -5.15622)

[node name="Title" type="Label" parent="."]
offset_left = 559.0
offset_top = 271.0
offset_right = 650.0
offset_bottom = 294.0
rotation = 0.00055337
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Shape Battle"
metadata/_edit_use_anchors_ = true

[node name="Enemy" parent="." instance=ExtResource("2_oqefw")]

[node name="Player" parent="." instance=ExtResource("3_hrxh0")]
script = ExtResource("3_cm6aa")

[node name="Weapon3" type="Button" parent="Player"]
offset_left = 254.0
offset_top = 438.0
offset_right = 391.0
offset_bottom = 484.0
text = "Attack 3"

[node name="Weapon4" type="Button" parent="Player"]
offset_left = 408.0
offset_top = 442.0
offset_right = 545.0
offset_bottom = 488.0
text = "Attack 4"

[node name="Weapon5" type="Button" parent="Player"]
offset_left = 255.0
offset_top = 500.0
offset_right = 392.0
offset_bottom = 546.0
text = "Attack 5"

[node name="Weapon6" type="Button" parent="Player"]
offset_left = 409.0
offset_top = 501.0
offset_right = 546.0
offset_bottom = 547.0
text = "Attack 6"

[node name="ScoreText" type="Label" parent="."]
offset_left = 24.0
offset_top = 28.0
offset_right = 243.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 48
text = "Score"

[node name="Score" type="Label" parent="."]
offset_left = 229.0
offset_top = 27.0
offset_right = 340.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 48
text = "0"

[connection signal="property_list_changed" from="Enemy" to="Player" method="_on_enemy_property_list_changed"]
[connection signal="ready" from="Player" to="Player" method="_on_ready"]
[connection signal="pressed" from="Player/Weapon3" to="Enemy" method="_on_weapon_3_pressed"]
[connection signal="pressed" from="Player/Weapon3" to="Player" method="_on_attack"]
[connection signal="pressed" from="Player/Weapon4" to="Enemy" method="_on_weapon_4_pressed"]
[connection signal="pressed" from="Player/Weapon4" to="Player" method="_on_attack"]
[connection signal="pressed" from="Player/Weapon5" to="Enemy" method="_on_weapon_5_pressed"]
[connection signal="pressed" from="Player/Weapon5" to="Player" method="_on_attack"]
[connection signal="pressed" from="Player/Weapon6" to="Enemy" method="_on_weapon_6_pressed"]
[connection signal="pressed" from="Player/Weapon6" to="Player" method="_on_attack"]
